Se sube en proyecto

--- a/login.html
+++ b/login.html
@@ -13,10 +13,18 @@
 </head>
 <body>
 <header>
-  <nav>
-<button type="button" class="btn btn-danger">Danger</button>
+  <!-- Navbar -->
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="/index.html">Regresar al Inicio</a>
+  
+    
+      </div>
+    </div>
+  </nav>
+  <!-- Container wrapper -->
 
-</nav>
+<!-- Navbar -->
     <section>
       
        <!--FIN Contenedor Menu-->   
