--- a/nuevousuario.html
+++ b/nuevousuario.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0,maximun-scale=1.0,minimum-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
-    <link rel="stylesheet" href="/css/nuevousuario.css">
+    <link rel="stylesheet" href="css/nuevousuario.css">
     <title>Registro</title>
 </head>
 <body>
@@ -13,7 +13,7 @@
   <!-- Navbar -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
-      <a class="navbar-brand" href="/index.html">Regresar al Inicio</a>
+      <a class="navbar-brand" href="index.html">Regresar al Inicio</a>
   
     
       </div>
