--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
 <body class="body">
 
   <!--Header (contiene Logo y Menu)-->
-  <header class="container " id="Inicio">
+  <header class="container  " id="Inicio">
     <!--Logo-->
     <h1>Foro de discusión medica Santov</h1>
 
 
 
     <!--Contenedor Menu-->
-    <div class="row menuContainer">
+    <div class="row col-md-12 menuContainer ">
       <ul class="nav  menuContainer">
         <li class="nav-item menubuttons">
           <a class="nav-link active" href="index.html">Inicio</a>
@@ -63,7 +63,7 @@
   <!--FIN Header (contiene Logo y Menu)-->
 
   <!--Seccion Carousel de Imagenes-->
-  <div class="container Secciones
+  <div class="container-fluid Secciones
     carouselContainer containerNopadding">
 
     <div id="carouselExampleFade" class="carousel slide carousel-fade NicoCarrusel" data-ride="carousel">
@@ -96,55 +96,143 @@
 
   <!--NOSOTROS-->
 
-  <div class="container Secciones containerNopadding" id="Nosotros">
+  <div class="container secciones containerNopadding" id="Nosotros">
 
-    <div class="row col-md-6 SeccionesTexto text-center">
+    <div class="  seccionesTexto text-center">
       <img src="utils/corazon.jpg" alt="Corazon">
+      <div class=" seccionesTexto">
+        <h2 class="text-center">¿Quienes Somos?</h2>
+        <p class="titaño ">En el hospital Santov ejercemos la profesión desde hace más veinte años.
+          En este foro hay profesionales con una formación inicial en residencias médicas reconocidas en cada
+          especialidad, y un trabajo ininterrumpido en los Servicios de Hemodinamia y Cardiología Intervencionista del
+          Hospital Santov.
+        </p>
+
+      </div>
     </div>
 
-    <div class="row col-md-6 SeccionesTexto">
-      <h2>¿Quienes Somos?</h2>
-      <p class="titaño  ">En el hospital Santov ejercemos la profesión desde hace más veinte años.
-        En este foro hay profesionales con una formación inicial en residencias médicas reconocidas en cada
-        especialidad, y un trabajo ininterrumpido en los Servicios de Hemodinamia y Cardiología Intervencionista del
-        Hospital Santov.
-      </p>
+    <div class=" seccionesTexto text-center ">
+      <img src="utils/medicina-operacion-cirugia-trasplante.jpg" alt="trasplante">
+      <div class="  seccionesTexto  ">
+        <h2 class="text-center">Nuestra Politica </h2>
+        <p class=" titaño ">Nuestra intención como foro, es brindar un servicio adecuado de alta calidad como
+          prestadores de salud, con una cobertura integral de todos los procedimientos vasculares centrales y
+          periféricos,
+          que nos es posible gracias a la variedad y calidad de los especialistas que conforman nuestro grupo médico.
+
+        </p>
+
+      </div>
+
+
 
     </div>
 
   </div>
-  </div>
+
 
   <!--FIN de NOSOTROS-->
 
 
   <!--Politicas-->
 
-  <div class="container Secciones containerNopadding" id="Politicas">
 
-    <div class="row col-md-6">
-      <img src="utils/medicina-operacion-cirugia-trasplante.jpg" alt="" width="95%" height="90%">
+  <!-- Footer -->
+  <footer class="bg-dark text-center text-white">
+    <!-- Grid container -->
+    <div class="container p-4">
+
+
+
+      <!-- Section: Text -->
+      <section class="mb-4">
+        <p>
+          Cuidado durante COVID-19
+          Nuestros médicos, enfermeras y personal dedicados están comprometidos a brindar la mejor atención posible.
+          Hemos tomado medidas sin precedentes para garantizar que las visitas al consultorio, los procedimientos y las
+          cirugías sean acogedores y seguros. Su salud y seguridad es nuestra máxima prioridad.
+        </p>
+      </section>
+      <!-- Section: Text -->
+
+
+      <!-- Section: Links -->
+      <section class="">
+        <!--Grid row-->
+        <div class="row">
+          <!--Grid column-->
+          <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+            <h5 class="text-uppercase">Perfiles de facebook</h5>
+
+            <ul class="list-unstyled mb-0">
+              <li>
+                <a href="https://www.facebook.com/enfermeriahemodinamia" class="text-white">Hemodinamia</a>
+              </li>
+              <li>
+                <a href="https://www.facebook.com/HarvardMed" class="text-white">Harvard </a>
+              </li>
+              <li>
+                <a href="https://www.facebook.com/CARDIOLOGIA/" class="text-white">Cardiologia </a>
+              </li>
+              <li>
+                <a href="https://www.facebook.com/infectologiasantojanni" class="text-white"> Santojanni </a>
+              </li>
+            </ul>
+          </div>
+          <!--Grid column-->
+
+          <!--Grid column-->
+          <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+            <h5 class="text-uppercase">Perfiles de instagram</h5>
+
+            <ul class="list-unstyled mb-0">
+
+              <li>
+                <a href="https://www.instagram.com/cardiologiasantojanni/!" class="text-white">Cardiologia</a>
+              </li>
+              <li>
+                <a href="https://www.instagram.com/hospitalalemanbsas/" class="text-white">Hospital Aleman</a>
+              </li>
+              <li>
+                <a href="https://www.instagram.com/stanford.med/" class="text-white">Stanford</a>
+              </li>
+            </ul>
+          </div>
+          <!--Grid column-->
+
+          <!--Grid column-->
+          <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+            <h5 class="text-uppercase">Canales de youtube</h5>
+
+            <ul class="list-unstyled mb-0">
+              <li>
+                <a href="https://www.youtube.com/watch?v=bFEtCXK-2u4&t=7s" class="text-white">COVID-19</a>
+              </li>
+              <li>
+                <a href="https://www.youtube.com/watch?v=It_cV56Dxtk" class="text-white">Cardiovascular</a>
+              </li>
+
+          </div>
+          <!--Grid column-->
+
+
+
+          <!--Grid row-->
+      </section>
+      <!-- Section: Links -->
+
     </div>
+    <!-- Grid container -->
 
-    <div class="row col-md-6 SeccionesTexto  ">
-      <h2>Nuestra Politica </h2>
-      <p class="nuestrapolitica  ">Nuestra intención como foro, es brindar un servicio adecuado de alta calidad como
-        prestadores de salud, con una cobertura integral de todos los procedimientos vasculares centrales y periféricos,
-        que nos es posible gracias a la variedad y calidad de los especialistas que conforman nuestro grupo médico, y a
-        la diversidad de centros médicos donde atendemos a los pacientes y que conforman una red de atención médica que
-        permite contener los momentos de demanda incrementada en la atención. También privilegiamos en todo momento el
-        contacto personal con los actores más importantes de la prestación de salud, como son los médicos de cabecera y
-        los auditores y directivos de las instituciones y obras sociales, que son los que nos brindan su confianza para
-        la resolución de los problemas de los pacientes.
-
-      </p>
-
+    <!-- Copyright -->
+    <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2)">
+      © 2020 Copyright:
+      <a class="text-white" href="https://mdbootstrap.com/">MDBootstrap.com</a>
     </div>
+    <!-- Copyright -->
 
-
-  </div>
-
-
+  </footer>
+  <!-- Footer -->
   <!--FIN de POLITICAS-->
 
   <!---->
@@ -170,7 +258,7 @@
 
 
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+  <script src=" https://code.jquery.com/jquery-3.5.1.slim.min.js"
     integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
   </script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
