--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
   <div class="container secciones containerNopadding" id="Nosotros">
 
     <div class="  seccionesTexto text-center">
-      <img src="utils/corazon.jpg" alt="Corazon">
+      <img class="img-fluid" src="utils/corazon.jpg" alt="Corazon">
       <div class=" seccionesTexto">
         <h2 class="text-center">¿Quienes Somos?</h2>
         <p class="titaño ">En el hospital Santov ejercemos la profesión desde hace más veinte años.
@@ -112,7 +112,7 @@
     </div>
 
     <div class=" seccionesTexto text-center ">
-      <img src="utils/medicina-operacion-cirugia-trasplante.jpg" alt="trasplante">
+      <img class="img-fluid" src="utils/medicina-operacion-cirugia-trasplante.jpg" alt="trasplante">
       <div class="  seccionesTexto  ">
         <h2 class="text-center">Nuestra Politica </h2>
         <p class=" titaño ">Nuestra intención como foro, es brindar un servicio adecuado de alta calidad como
