--- a/Valvulas.html
+++ b/Valvulas.html
@@ -87,19 +87,26 @@
             y en especial la Angioplastia Coronaria, han producido un importante impacto en el manejo de la enfermedad
             coronaria.
 
-            <!-- <iframe class="img-fluid" width="400" height="200" src="https://www.youtube.com/embed/azw4nDGJ27o" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
+            <iframe class="img-fluid" width="100%" height="200" src="https://www.youtube.com/embed/azw4nDGJ27o"
+              title="YouTube video player" frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+              allowfullscreen></iframe>
+
           </p>
 
         </div>
         <div class="Procedimientos__imagen">
-          <img class="img-fluid" src="./utils/more/amena4.jpg" alt="Cardiología intervencionista">
+          <img src="./utils/more/amena4.jpg" alt="Cardiología intervencionista">
           <p class="Procedimientos__subtitulo">Cardiología intervencionista</p>
           <p class="titaño   ">
             En los últimos 10 años la intervención cardiovascular, y en especial la Angioplastia Coronaria, han
             producido un importante impacto en el manejo de la enfermedad coronaria,
             como lo demuestra el incremento exponencial en el número de procedimientos efectuados en todo el mundo.
           </p>
-          <!-- <iframe class="img-fluid" width="400" height="200" src="https://www.youtube.com/embed/uh01Fg4MelY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
+          <iframe class="img-fluid" width="100%" height="200" src="https://www.youtube.com/embed/uh01Fg4MelY"
+            title="YouTube video player" frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen></iframe>
         </div>
         <div class="Procedimientos__imagen">
           <img class="img-fluid" src="./utils/more/amena2.jpg" alt="confeccion">
@@ -120,7 +127,10 @@
             seguro, cuyo propósito es restablecer la salud de quien sufre una
             enfermedad coronaria.
           </p>
-          <!-- <iframe class="img-fluid" width="400" height="200" src="https://www.youtube.com/embed/xvXg-Xx-kvI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
+          <iframe class="img-fluid" width="100%" height="200" src="https://www.youtube.com/embed/xvXg-Xx-kvI"
+            title="YouTube video player" frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen></iframe>
         </div>
 
       </div>
@@ -129,6 +139,102 @@
     </section>
 
   </main>
+  <!-- Footer -->
+  <footer class="bg-dark text-center text-white">
+    <!-- Grid container -->
+    <div class="container p-4">
+
+
+
+      <!-- Section: Text -->
+      <section class="mb-4">
+        <p>
+          Cuidado durante COVID-19
+          Nuestros médicos, enfermeras y personal dedicados están comprometidos a brindar la mejor atención posible.
+          Hemos tomado medidas sin precedentes para garantizar que las visitas al consultorio, los procedimientos y las
+          cirugías sean acogedores y seguros. Su salud y seguridad es nuestra máxima prioridad.
+        </p>
+      </section>
+      <!-- Section: Text -->
+
+
+      <!-- Section: Links -->
+      <section class="">
+        <!--Grid row-->
+        <div class="row">
+          <!--Grid column-->
+          <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+            <h5 class="text-uppercase">Perfiles de facebook</h5>
+
+            <ul class="list-unstyled mb-0">
+              <li>
+                <a href="https://www.facebook.com/enfermeriahemodinamia" class="text-white">Hemodinamia</a>
+              </li>
+              <li>
+                <a href="https://www.facebook.com/HarvardMed" class="text-white">Harvard </a>
+              </li>
+              <li>
+                <a href="https://www.facebook.com/CARDIOLOGIA/" class="text-white">Cardiologia </a>
+              </li>
+              <li>
+                <a href="https://www.facebook.com/infectologiasantojanni" class="text-white"> Santojanni </a>
+              </li>
+            </ul>
+          </div>
+          <!--Grid column-->
+
+          <!--Grid column-->
+          <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+            <h5 class="text-uppercase">Perfiles de instagram</h5>
+
+            <ul class="list-unstyled mb-0">
+
+              <li>
+                <a href="https://www.instagram.com/cardiologiasantojanni/!" class="text-white">Cardiologia</a>
+              </li>
+              <li>
+                <a href="https://www.instagram.com/hospitalalemanbsas/" class="text-white">Hospital Aleman</a>
+              </li>
+              <li>
+                <a href="https://www.instagram.com/stanford.med/" class="text-white">Stanford</a>
+              </li>
+            </ul>
+          </div>
+          <!--Grid column-->
+
+          <!--Grid column-->
+          <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+            <h5 class="text-uppercase">Canales de youtube</h5>
+
+            <ul class="list-unstyled mb-0">
+              <li>
+                <a href=" https://www.youtube.com/watch?v=bFEtCXK-2u4&t=7s" class="text-white">COVID-19</a>
+              </li>
+              <li>
+                <a href="https://www.youtube.com/watch?v=It_cV56Dxtk" class="text-white">Cardiovascular</a>
+              </li>
+
+          </div>
+          <!--Grid column-->
+
+
+
+          <!--Grid row-->
+      </section>
+      <!-- Section: Links -->
+
+    </div>
+    <!-- Grid container -->
+
+
+    <div class="text-center p-3">
+
+
+    </div>
+
+
+  </footer>
+  <!-- Footer -->
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js"
     integrity="sha384-SR1sx49pcuLnqZUnnPwx6FCym0wLsk5JZuNx2bPPENzswTNFaQU1RDvt3wT4gWFG" crossorigin="anonymous">
   </script>
