--- a/nuevousuario.html
+++ b/nuevousuario.html
@@ -56,8 +56,8 @@
             <label for="Contraseña " class="label">Contraseña </label>
           </div>
 
-          <div class=" control1 form-field col-lg-12">
-            <input class="submit-btn" type="submit" value="Enviar datos" name="">
+          <div class="  form-field col-lg-12">
+            <input class="contact-form submit-btn" type="submit" value="Enviar datos" name="">
           </div>
         </div>
       </div>
