--- a/login.html
+++ b/login.html
@@ -73,7 +73,103 @@
   <!--
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js" integrity="sha384-SR1sx49pcuLnqZUnnPwx6FCym0wLsk5JZuNx2bPPENzswTNFaQU1RDvt3wT4gWFG" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.min.js" integrity="sha384-j0CNLUeiqtyaRmlzUHCPZ+Gy5fQu0dQ6eZ/xAww941Ai1SxSY+0EQqNXNE6DZiVc" crossorigin="anonymous"></script>
-    -->
+  -->
+  <!-- Footer -->
+  <footer class="bg-dark text-center text-white">
+    <!-- Grid container -->
+    <div class="container p-4">
+
+
+
+      <!-- Section: Text -->
+      <section class="mb-4">
+        <p>
+          Cuidado durante COVID-19
+          Nuestros médicos, enfermeras y personal dedicados están comprometidos a brindar la mejor atención posible.
+          Hemos tomado medidas sin precedentes para garantizar que las visitas al consultorio, los procedimientos y las
+          cirugías sean acogedores y seguros. Su salud y seguridad es nuestra máxima prioridad.
+        </p>
+      </section>
+      <!-- Section: Text -->
+
+
+      <!-- Section: Links -->
+      <section class="">
+        <!--Grid row-->
+        <div class="row">
+          <!--Grid column-->
+          <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+            <h5 class="text-uppercase">Perfiles de facebook</h5>
+
+            <ul class="list-unstyled mb-0">
+              <li>
+                <a href="https://www.facebook.com/enfermeriahemodinamia" class="text-white">Hemodinamia</a>
+              </li>
+              <li>
+                <a href="https://www.facebook.com/HarvardMed" class="text-white">Harvard </a>
+              </li>
+              <li>
+                <a href="https://www.facebook.com/CARDIOLOGIA/" class="text-white">Cardiologia </a>
+              </li>
+              <li>
+                <a href="https://www.facebook.com/infectologiasantojanni" class="text-white"> Santojanni </a>
+              </li>
+            </ul>
+          </div>
+          <!--Grid column-->
+
+          <!--Grid column-->
+          <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+            <h5 class="text-uppercase">Perfiles de instagram</h5>
+
+            <ul class="list-unstyled mb-0">
+
+              <li>
+                <a href="https://www.instagram.com/cardiologiasantojanni/!" class="text-white">Cardiologia</a>
+              </li>
+              <li>
+                <a href="https://www.instagram.com/hospitalalemanbsas/" class="text-white">Hospital Aleman</a>
+              </li>
+              <li>
+                <a href="https://www.instagram.com/stanford.med/" class="text-white">Stanford</a>
+              </li>
+            </ul>
+          </div>
+          <!--Grid column-->
+
+          <!--Grid column-->
+          <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+            <h5 class="text-uppercase">Canales de youtube</h5>
+
+            <ul class="list-unstyled mb-0">
+              <li>
+                <a href="https://www.youtube.com/watch?v=bFEtCXK-2u4&t=7s" class="text-white">COVID-19</a>
+              </li>
+              <li>
+                <a href="https://www.youtube.com/watch?v=It_cV56Dxtk" class="text-white">Cardiovascular</a>
+              </li>
+
+          </div>
+          <!--Grid column-->
+
+
+
+          <!--Grid row-->
+      </section>
+      <!-- Section: Links -->
+
+    </div>
+    <!-- Grid container -->
+
+    <!-- Copyright -->
+    <div class="text-center p-3">
+
+
+    </div>
+    <!-- Copyright -->
+
+  </footer>
+  <!-- Footer -->
 </body>
 
 </html>
