Ultimos cambios de estrucutura

--- a/Cateterismo.html
+++ b/Cateterismo.html
@@ -26,7 +26,7 @@
   <!--Header (contiene Logo y Menu)-->
   <header class="container" id="Inicio">
     <!--Logo-->
-    <h1>Cateterismos Vasculares </h1>
+    <h2 class="text-danger ">Cateterismos </h2>
     <!--FIN logo-->
 
     <!--Contenedor Menu-->
@@ -68,7 +68,7 @@
       <img src="utils/more/cateterismo5.gif" alt="" width="330px" height="400px">
 
     </div>
-    <h2>
+    <h2 class="text-danger text-center">
       Cateterismos Periféricos intervencionistas</h2>
   </div>
 
@@ -100,7 +100,7 @@
 
 
   <div class="container">
-    <h2>Cateterismos<br> Vasculares </h2>
+    <h2 class="text-danger text-center ">Cateterismos<br> Vasculares </h2>
     <div class="row col-md-12 img-galeria">
 
       <img src="utils/more/cateterismo5.gif" alt="" width="330px" height="400px">
@@ -115,7 +115,7 @@
 
   </div>
   <!-- Footer -->
-  <footer class="bg-dark text-center text-white">
+  <footer class="bg-transparent text-center text-white">
     <!-- Grid container -->
     <div class="container p-4">
 
@@ -123,7 +123,7 @@
 
       <!-- Section: Text -->
       <section class="mb-4">
-        <p>
+        <p class="titaño">
           Cuidado durante COVID-19
           Nuestros médicos, enfermeras y personal dedicados están comprometidos a brindar la mejor atención posible.
           Hemos tomado medidas sin precedentes para garantizar que las visitas al consultorio, los procedimientos y las
