--- a/Valvulas.html
+++ b/Valvulas.html
@@ -8,10 +8,10 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
   <link rel="stylesheet" href="css/valvulas.css">
-  <title>procedimientos</title>
+  <title>Galeria</title>
 </head>
 
-<body>
+<body class="bg-dark">
   <!-- Encabezado-->
 
   <header class="container-fluid bg-dark d-flex
@@ -49,91 +49,108 @@
 
 
 
-
   </header>
   <!--fin header-->
+  <hr>
 
-
+  <h1 class="text-center titaño text-danger  ">
+    Galeria del foro
+  </h1>
+  <hr>
   <main>
+    <section class="text-center container-sm b-flex align-items-center  ">
 
 
-    <section class="Procedimientos text-center">
-      <h1 class="display-1">Procedimientos</h1>
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-6">
+            <div class=" Procedimientos__imagen bg-dark row ">
+              <h3 class=" Procedimientos__subtitulo  badge bg-dark text-wrap fw-bolder fs-1 ">Angiografía Vascular </h3>
 
-      <div class=" Procedimientos_imagenes">
-        <div class="Procedimientos__imagen">
-          <img class="img-fluid" src="./utils/more/ameno7.png" alt="sublimacion">
-          <p class="Procedimientos__subtitulo">Angiografía vascular periférica diagnóstica</p>
-          <p class="titaño">
+              <video class="img-fluid  card-img-top " autoplay controls src="./utils/gifs/2_1.mp4"></video>
 
-            El estudio angiográfico de las arterias y venas cerebrales, de los miembros superior e inferior y del
-            territorio esplácnico, tiene un rol destacado en el diagnóstico y terapéutica de un amplio espectro de
-            patología vascular (aneurismas, malformaciones arteriovenosas, angiodisplasias, obstrucciones arteriales
-            ateroscleróticas, etc.). Así como en la hemodinamia cardíaca, la mayor parte de los pacientes son manejados
-            de manera ambulatoria, con un control posterior clínico y de los sitios de punción de 4 a 6 horas.
 
-          </p>
+              <p class="titaño badge bg-dark text-wrap fw-bolder fs-3 ">
 
+                El estudio angiográfico de las arterias y venas cerebrales, de los miembros superior e inferior y del
+                territorio esplácnico, tiene un rol destacado en el diagnóstico y terapéutica de un amplio espectro de
+                patología vascular
+
+              </p>
+
+            </div>
+          </div>
+
+
+          <div class="col-sm-6">
+            <div class="Procedimientos__imagen bg-dark row  fw-bolder ">
+              <h3 class="fs-1  badge bg-dark text-wrap fw-bolder ">
+                Periferia </h3>
+              <img class="img-fluid card-img-top " src="./utils/cardiac3.jpg" alt="
+            Cateterismo vascular  intervencionista">
+
+              <p class=" bg-dark text-wrap fw-bolder badge fs-3 ">
+
+                <!-- <p class="titaño text-center badge bg-dark text-wrap fw-bolder"> -->
+
+
+
+                La genética: estudio de los genes; La microbiología: estudio de
+                microorganismos. Se incluye en esta rama de conocimiento la bacteriología (bacterias), virología
+                (virus),
+                micología (hongos) y parasitología (parásitos).
+
+
+              </p>
+
+            </div>
+          </div>
         </div>
 
-        <div class="Procedimientos__imagen">
+        <div class="col-sm ">
+          <div class="Procedimientos__imagen bg-dark row p-2">
+            <p class="Procedimientos__subtitulo text-wrap  fw-bolder ">Insuficiencia Cardiovascular</p>
+            <video class="img-fluid card-img-top " autoplay controls src="./utils/gifs/3_1.mp4"></video>
+            <p class=" bg-dark text-wrap fw-bolder fs-3  ">
 
-          <img class="img-fluid" src="./utils/cardiac3.jpg" alt="
-        Cateterismo vascular  intervencionista">
-          <p class="Procedimientos__subtitulo">
-            Cateterismo vascular periférico intervencionista</p>
-          <p class="titaño">
-            En los últimos 10 años la intervención cardiovascular,
-            y en especial la Angioplastia Coronaria, han producido un importante impacto en el manejo de la enfermedad
-            coronaria.
+              La cardiología (del griego καρδία kardía ‘corazón’, y λογία loguía ‘estudio’) es la rama de la medicina
+              que se
+              encarga del estudio, diagnóstico y tratamiento de las enfermedades del corazón y del sistema circulatorio.
+              Es
+              médica, pero no quirúrgica.
 
-            <iframe class="img-fluid" width="100%" height="200" src="https://www.youtube.com/embed/azw4nDGJ27o"
-              title="YouTube video player" frameborder="0"
-              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-              allowfullscreen></iframe>
 
-          </p>
 
+
+
+            </p>
+
+
+          </div>
         </div>
-        <div class="Procedimientos__imagen">
-          <img src="./utils/more/amena4.jpg" alt="Cardiología intervencionista">
-          <p class="Procedimientos__subtitulo">Cardiología intervencionista</p>
-          <p class="titaño   ">
-            En los últimos 10 años la intervención cardiovascular, y en especial la Angioplastia Coronaria, han
-            producido un importante impacto en el manejo de la enfermedad coronaria,
-            como lo demuestra el incremento exponencial en el número de procedimientos efectuados en todo el mundo.
-          </p>
-          <iframe class="img-fluid" width="100%" height="200" src="https://www.youtube.com/embed/uh01Fg4MelY"
-            title="YouTube video player" frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-            allowfullscreen></iframe>
-        </div>
-        <div class="Procedimientos__imagen">
-          <img class="img-fluid" src="./utils/more/amena2.jpg" alt="confeccion">
-          <p class="Procedimientos__subtitulo">Enfermedad coronaria</p>
-          <p class="titaño ">
+        <div class="col-sm">
+          <div class="Procedimientos__imagen bg-dark row ">
+            <p class="Procedimientos__subtitulo">Enfermedad Coronaria</p>
 
-            Dentro de la cirugía cardiovascular, la
-            cirugía de bypass coronario (cirugía
-            de revascularización miocárdica) es
-            la operación más frecuente, seguida
-            por la cirugía de reemplazo valvular.
-            En menor porcentaje, existen otras
-            cirugías cardíacas tales como el
-            trasplante cardíaco, la cirugía de
-            la aorta torácica, etc. La cirugía de
-            revascularización miocárdica es hoy
-            un procedimiento simple y muy
-            seguro, cuyo propósito es restablecer la salud de quien sufre una
-            enfermedad coronaria.
-          </p>
-          <iframe class="img-fluid" width="100%" height="200" src="https://www.youtube.com/embed/xvXg-Xx-kvI"
-            title="YouTube video player" frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-            allowfullscreen></iframe>
+            <img class="img-fluid card-img-top " src="./utils/coraza.webp" alt="">
+
+            <p class="titaño fs-3 ">
+
+              Dentro de la cirugía cardiovascular, la
+              cirugía de bypass coronario (cirugía
+              de revascularización miocárdica) es
+              la operación más frecuente, seguida
+              por la cirugía de reemplazo valvular.
+
+            </p>
+
+
+          </div>
         </div>
 
       </div>
+
+
 
 
     </section>
@@ -159,7 +176,7 @@
 
 
       <!-- Section: Links -->
-      <section class="">
+      <section>
         <!--Grid row-->
         <div class="row">
           <!--Grid column-->
