--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
   <link rel="stylesheet" href="css/style.css">
 
-  <title>HospitalSantov</title>
+  <title>Hospital Santov</title>
 </head>
 
 <body class="body">
@@ -27,7 +27,7 @@
   <!--Header (contiene Logo y Menu)-->
   <header class="container  " id="Inicio">
     <!--Logo-->
-    <h1>Foro de discusión medica Santov</h1>
+    <h1 class="text-center text-danger">Foro de discusión Médica Santov</h1>
 
 
 
@@ -41,7 +41,7 @@
           <a class="nav-link active" href="Valvulas.html">Procedimientos</a>
         </li>
         <li class="nav-item menubuttons">
-          <a class="nav-link active" href="#Politicas">Politicas</a>
+          <a class="nav-link active" href="#Politicas">Políticas</a>
         </li>
         <li class="nav-item menubuttons">
           <a class="nav-link active" href="Cateterismo.html">Cateterismos</a>
@@ -51,7 +51,7 @@
             aria-haspopup="true" aria-expanded="false">Socios</a>
           <div class="dropdown-menu  NicoDropdownItems">
             <a class="dropdown-item " href="nuevousuario.html">Registrarse</a>
-            <a class="dropdown-item " href="login.html">Iniciar Sesion</a>
+            <a class="dropdown-item " href="login.html">Iniciar Sesión</a>
 
 
           </div>
@@ -69,7 +69,7 @@
     <div id="carouselExampleFade" class="carousel slide carousel-fade NicoCarrusel" data-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="utils/carusel.jpg" class="d-block w-100" alt="...">
+          <img src="utils/cardiac5.jpg" class="d-block w-100" alt="...">
         </div>
         <div class="carousel-item">
           <img src="utils/microscopio.jpg" class="d-block w-100" alt="...">
@@ -98,47 +98,124 @@
 
   <div class="container secciones containerNopadding" id="Nosotros">
 
-    <div class="  seccionesTexto text-center">
-      <img class="img-fluid" src="utils/corazon.jpg" alt="Corazon">
+    <div class="  seccionesTexto text-center  ">
+
       <div class=" seccionesTexto">
-        <h2 class="text-center">¿Quienes Somos?</h2>
-        <p class="titaño ">En el hospital Santov ejercemos la profesión desde hace más veinte años.
+        <h2 id="Politicas" class="text-center text-danger">¿Quienes Somos y <br>¿Cuál es Nuestra Política? </h2>
+        <p class=" titaño  ">En el Foro de comunicación vascular Santov ejercemos la profesión desde hace
+          más veinte años.
           En este foro hay profesionales con una formación inicial en residencias médicas reconocidas en cada
-          especialidad, y un trabajo ininterrumpido en los Servicios de Hemodinamia y Cardiología Intervencionista del
-          Hospital Santov.
-        </p>
-
-      </div>
-    </div>
-
-    <div class=" seccionesTexto text-center ">
-      <img class="img-fluid" src="utils/medicina-operacion-cirugia-trasplante.jpg" alt="trasplante">
-      <div class="  seccionesTexto  ">
-        <h2 class="text-center">Nuestra Politica </h2>
-        <p class=" titaño ">Nuestra intención como foro, es brindar un servicio adecuado de alta calidad como
+          especialidad, y un trabajo ininterrumpido en los Servicios de Hemodinámica y Cardiología
+          Intervencionista Nuestra intención como foro, es brindar un servicio adecuado de alta calidad como
           prestadores de salud, con una cobertura integral de todos los procedimientos vasculares centrales y
           periféricos,
           que nos es posible gracias a la variedad y calidad de los especialistas que conforman nuestro grupo médico.
+          Ejercemos la profesión desde hace más veinte años, con formación inicial en residencias médicas reconocidas en
+          cada especialidad, y un trabajo ininterrumpido en los Servicios de Hemodinámia y Cardiología Intervencionista
+
 
         </p>
 
       </div>
-
-
-
     </div>
+    <!--FIN de NOSOTROS  <!--Politicas-->
 
+
+  </div>
+  <div class=" container Secciones containerNopadding">
+
+    <div class="  seccionesTexto text-center">
+      <div class="seccionesTexto">
+        <h2 class="text-center text-danger "> Sobre este sitio web </h2>
+        <ul class="titaño">
+          <li>El presente sitio está dirigido a profesionales médicos, pacientes y público en general que requiera
+            información sobre procedimientos, técnicas o indicaciones utilizadas por “Medicina Vascular”
+          </li>
+          <hr>
+          <li>
+            Todo consejo o sugerencia médica en este sitio web está avalada por el equipo médico de Medicina
+            Vascular y
+            su director
+          </li>
+          <hr>
+          <li>
+
+
+            La información que se proporciona en nuestra página está pensada solo para ofrecer sugerencias y no
+            reemplaza la visita médica y relación médico-paciente.
+            Nuestro sitio adhiere y se compromete al respeto de las normas legales de confidencialidad y
+            privacidad de
+            sus visitantes y de los emails que se reciban y casos publicados.
+            No hay datos, ni iniciales de nombres de pacientes que pueda sugerir la identidad de los mismos.
+
+
+
+          </li>
+          <hr>
+          <li>
+            El patrocinio de la página está a cargo de Medicina Vascular, aceptándose publicidad comercial y/o de
+            intercambio, la cual se encuentra plenamente identificada.
+            Cuando la PUBLICIDAD contribuya a la financiación del sitio WEB, será específicamente aclarado si
+            existiera
+            algún tipo de relación y/o implicancia entre las empresas o firmas patrocinales y el material
+            publicado.
+            Nuestras fuentes de financiación no influyen en nuestro contenido editorial”.
+            El nuestro sito web aloja publicidad de Google. Nosotros no tenemos ningún control sobre el contenido
+            de
+            estos anuncios, ni Google tiene control sobre nuestros contenidos.
+            El presente sitio está adherido a “Google Analytics”.
+          </li>
+
+        </ul>
+
+      </div>
+    </div>
   </div>
 
 
-  <!--FIN de NOSOTROS-->
-
-
-  <!--Politicas-->
 
 
   <!-- Footer -->
-  <footer class="bg-dark text-center text-white">
+  <footer class="bg-transparent text-center text-light">
+    <div class="row row-cols-1 row-cols-md-3 g-4">
+      <div class="col">
+        <div class="card h-100 bg-transparent">
+          <img src="/utils/bypass.jpg" class="card-img-top img-fluid" alt="ImagenTarjeta1">
+          <div class="card-body">
+            <h5 class="card-title"></h5>
+            <p class="card-text">.</p>
+          </div>
+          <div class="card-footer  bg-transparent">
+            <small class="text-muted"></small>
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card h-100 bg-transparent">
+          <img src="./utils/carusel.jpg  " class="card-img-top img-fluid" alt="ImagenTarjeta2">
+          <div class="card-body">
+            <h5 class="card-title">La hipoglucemia aguda se refleja en la disminución de microbios en la hemoglobina y
+              el flujo renal</h5>
+
+          </div>
+          <div class="card-footer">
+            <small class="text-muted"></small>
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card h-100 bg-transparent">
+          <img src="/utils/operacion.jpg" class="card-img-top img-fluid " alt="ImagenTarjeta3">
+          <div class="card-body">
+            <h5 class="card-title"></h5>
+            <p class="card-text"></p>
+          </div>
+          <div class="card-footer bg-transparent">
+            <small class="text-muted"></small>
+          </div>
+        </div>
+      </div>
+    </div>
     <!-- Grid container -->
     <div class="container p-4">
 
@@ -148,8 +225,11 @@
       <section class="mb-4">
         <p>
           Cuidado durante COVID-19
-          Nuestros médicos, enfermeras y personal dedicados están comprometidos a brindar la mejor atención posible.
-          Hemos tomado medidas sin precedentes para garantizar que las visitas al consultorio, los procedimientos y las
+          Nuestros médicos, enfermeras y personal dedicados están comprometidos a brindar la mejor atención
+          posible.
+          Hemos tomado medidas sin precedentes para garantizar que las visitas al consultorio, los
+          procedimientos y
+          las
           cirugías sean acogedores y seguros. Su salud y seguridad es nuestra máxima prioridad.
         </p>
       </section>
@@ -157,7 +237,7 @@
 
 
       <!-- Section: Links -->
-      <section class="">
+      <section>
         <!--Grid row-->
         <div class="row">
           <!--Grid column-->
@@ -224,35 +304,16 @@
     </div>
     <!-- Grid container -->
 
-    <!-- Copyright -->
-    <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2)">
-      © 2020 Copyright:
-      <a class="text-white" href="https://mdbootstrap.com/">MDBootstrap.com</a>
-    </div>
-    <!-- Copyright -->
+
+
 
   </footer>
   <!-- Footer -->
-  <!--FIN de POLITICAS-->
-
-  <!---->
-
-
-
 
 
 
 
   <!-- Optional JavaScript -->
-
-
-
-
-
-
-
-
-
 
 
 
