--- a/login.html
+++ b/login.html
@@ -6,11 +6,15 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width,user-scalabre=no initial-scale=1.0">
   <title>Login </title>
-
+  <!-- SEO-->
+  <meta name="description"
+    content="El Foro santov hace ya mas de 20 años se ocupa de cuidarte.Nuestro equipo se especializa en el intervencionismo cardiologico periferico">
+  <meta name="keywords"
+    content=" Foro santov  Salud Medicina Cardiovascular Hemodinamia Hospital Quirurgico Cirugia Corazon Intervencionismo ">
+  <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
 
-  <link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/login.css">
 </head>
 
@@ -47,7 +51,7 @@
           <span> <input type="checkbox">Recordar clave</span>
           <div class="control">
 
-            <input class="control1" type="submit" value="Entrar">
+            <input class="bg-danger" type="submit" value="Entrar">
           </div>
 
           <div class="link">
