--- a/nuevousuario.html
+++ b/nuevousuario.html
@@ -5,6 +5,12 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0,maximun-scale=1.0,minimum-scale=1.0">
+  <!-- SEO-->
+  <meta name="description"
+    content="El Foro santov hace ya mas de 20 años se ocupa de cuidarte.Nuestro equipo se especializa en el intervencionismo cardiologico periferico">
+  <meta name="keywords"
+    content=" Foro santov  Salud Medicina Cardiovascular Hemodinamia Hospital Quirurgico Cirugia Corazon Intervencionismo ">
+  <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
   <link rel="stylesheet" href="css/nuevousuario.css">
@@ -56,8 +62,8 @@
             <label for="Contraseña " class="label">Contraseña </label>
           </div>
 
-          <div class="  form-field col-lg-12">
-            <input class="contact-form submit-btn" type="submit" value="Enviar datos" name="">
+          <div class="  form-field col-12">
+            <input class=" bg-success w-100  contact-form submit-btn" type="submit" value="Enviar datos" name="">
           </div>
         </div>
       </div>
