Subo cambios de la estructura

--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
           <img src="/utils/bypass.jpg" class="card-img-top img-fluid" alt="ImagenTarjeta1">
           <div class="card-body">
             <h5 class="card-title"></h5>
-            <p class="card-text">.</p>
+            <p class="card-text"></p>
           </div>
           <div class="card-footer  bg-transparent">
             <small class="text-muted"></small>
@@ -194,7 +194,8 @@
         <div class="card h-100 bg-transparent">
           <img src="./utils/carusel.jpg  " class="card-img-top img-fluid" alt="ImagenTarjeta2">
           <div class="card-body">
-            <h5 class="card-title">La hipoglucemia aguda se refleja en la disminución de microbios en la hemoglobina y
+            <h5 class="card-title text-danger">La hipoglucemia aguda se refleja en la disminución de microbios en la
+              hemoglobina y
               el flujo renal</h5>
 
           </div>
