--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
     <div class="row row-cols-1 row-cols-md-3 g-4">
       <div class="col">
         <div class="card h-100 bg-transparent">
-          <img src="/utils/bypass.jpg" class="card-img-top img-fluid" alt="ImagenTarjeta1">
+          <img src="./utils/bypass.jpg" class="card-img-top img-fluid" alt="ImagenTarjeta1">
           <div class="card-body">
             <h5 class="card-title"></h5>
             <p class="card-text"></p>
@@ -206,7 +206,7 @@
       </div>
       <div class="col">
         <div class="card h-100 bg-transparent">
-          <img src="/utils/operacion.jpg" class="card-img-top img-fluid " alt="ImagenTarjeta3">
+          <img src="./utils/operacion.jpg" class="card-img-top img-fluid " alt="ImagenTarjeta3">
           <div class="card-body">
             <h5 class="card-title"></h5>
             <p class="card-text"></p>
