--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <!--Header (contiene Logo y Menu)-->
   <header class="container  " id="Inicio">
     <!--Logo-->
-    <h1 class="text-center text-danger">Foro de discusión Médica Santov</h1>
+    <h1 class="text-center ">Foro de discusión Médica Santov</h1>
 
 
 
@@ -69,13 +69,13 @@
     <div id="carouselExampleFade" class="carousel slide carousel-fade NicoCarrusel" data-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="utils/cardiac5.jpg" class="d-block w-100" alt="...">
+          <img src="utils/cardiacCarusel.jpg" class=" d-block w-100" alt="...">
         </div>
         <div class="carousel-item">
           <img src="utils/microscopio.jpg" class="d-block w-100" alt="...">
         </div>
         <div class="carousel-item">
-          <img src="utils/cardiacCarusel.jpg" class="d-block w-100  " alt="...">
+          <img src="utils/carusel3.jpg" class=" d-block w-100 " alt=" ...">
         </div>
       </div>
       <a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-slide="prev">
@@ -85,7 +85,7 @@
       <a class="carousel-control-next" href="#carouselExampleFade" role="button" data-slide="next">
         <span class="carousel-control-next-icon" aria-hidden="true"></span>
         <span class="sr-only">Next</span>
-      </a>
+      </a>ca
     </div>
 
 
@@ -180,7 +180,7 @@
     <div class="row row-cols-1 row-cols-md-3 g-4">
       <div class="col">
         <div class="card h-100 bg-transparent">
-          <img src="./utils/bypass.jpg" class="card-img-top img-fluid" alt="ImagenTarjeta1">
+          <img src="./utils/oscuridadCardio.jpg" class="card-img-top img-fluid" alt="ImagenTarjeta1">
           <div class="card-body">
             <h5 class="card-title"></h5>
             <p class="card-text"></p>
@@ -194,9 +194,9 @@
         <div class="card h-100 bg-transparent">
           <img src="./utils/carusel.jpg  " class="card-img-top img-fluid" alt="ImagenTarjeta2">
           <div class="card-body">
-            <h5 class="card-title text-danger">La hipoglucemia aguda se refleja en la disminución de microbios en la
+            <!-- <h5 class="card-title text-danger">La hipoglucemia aguda se refleja en la disminución de microbios en la
               hemoglobina y
-              el flujo renal</h5>
+              el flujo renal</h5> -->
 
           </div>
           <div class="card-footer">
@@ -206,7 +206,7 @@
       </div>
       <div class="col">
         <div class="card h-100 bg-transparent">
-          <img src="./utils/operacion.jpg" class="card-img-top img-fluid " alt="ImagenTarjeta3">
+          <img src="./utils/clarodadeditada.jpeg" class=" card-img-top img-fluid " alt=" ImagenTarjeta3">
           <div class="card-body">
             <h5 class="card-title"></h5>
             <p class="card-text"></p>
