--- a/index.html
+++ b/index.html
@@ -69,13 +69,13 @@
     <div id="carouselExampleFade" class="carousel slide carousel-fade NicoCarrusel" data-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="utils/cardiacCarusel.jpg" class=" d-block w-100" alt="...">
+          <img src="utils/cardiacCarusel.jpg" class=" d-block w-100" alt="IMAGENCARUSEL1">
         </div>
         <div class="carousel-item">
-          <img src="utils/microscopio.jpg" class="d-block w-100" alt="...">
+          <img src="utils/microscopio.jpg" class="d-block w-100" alt="IMAGENCARUSEL2">
         </div>
         <div class="carousel-item">
-          <img src="utils/carusel3.jpg" class=" d-block w-100 " alt=" ...">
+          <img src="utils/carusel3.jpg" class=" d-block w-100 " alt=" IMAGENCARUSEL3">
         </div>
       </div>
       <a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-slide="prev">
@@ -85,7 +85,7 @@
       <a class="carousel-control-next" href="#carouselExampleFade" role="button" data-slide="next">
         <span class="carousel-control-next-icon" aria-hidden="true"></span>
         <span class="sr-only">Next</span>
-      </a>ca
+      </a>
     </div>
 
 
@@ -101,8 +101,8 @@
     <div class="  seccionesTexto text-center  ">
 
       <div class=" seccionesTexto">
-        <h2 id="Politicas" class="text-center text-danger">¿Quienes Somos y <br>¿Cuál es Nuestra Política? </h2>
-        <p class=" titaño  ">En el Foro de comunicación vascular Santov ejercemos la profesión desde hace
+        <h2 id="Politicas" class="text-center fs-3 text-danger">¿Quienes Somos y <br>¿Cuál es Nuestra Política? </h2>
+        <p class=" fs-2">En el Foro de comunicación vascular Santov ejercemos la profesión desde hace
           más veinte años.
           En este foro hay profesionales con una formación inicial en residencias médicas reconocidas en cada
           especialidad, y un trabajo ininterrumpido en los Servicios de Hemodinámica y Cardiología
@@ -126,8 +126,8 @@
 
     <div class="  seccionesTexto text-center">
       <div class="seccionesTexto">
-        <h2 class="text-center text-danger "> Sobre este sitio web </h2>
-        <ul class="titaño">
+        <h2 class="text-center fs-3 text-danger "> Sobre este sitio web </h2>
+        <ul class="titaño fs-2 ">
           <li>El presente sitio está dirigido a profesionales médicos, pacientes y público en general que requiera
             información sobre procedimientos, técnicas o indicaciones utilizadas por “Medicina Vascular”
           </li>
@@ -294,22 +294,22 @@
               </li>
 
           </div>
-          <!--Grid column-->
+          <!--FIN DE Grid column-->
 
 
 
-          <!--Grid row-->
+
       </section>
-      <!-- Section: Links -->
+      <!-- FIN DE Section: Links -->
 
     </div>
-    <!-- Grid container -->
+
 
 
 
 
   </footer>
-  <!-- Footer -->
+  <!-- FIN DEL FOOTER -->
 
 
 
