--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <!--Header (contiene Logo y Menu)-->
   <header class="container  " id="Inicio">
     <!--Logo-->
-    <h1 class="text-center ">Foro de discusión Médica Santov</h1>
+    <h1 class="text-center fs-1 ">Foro de discusión Médica Santov</h1>
 
 
 
@@ -35,16 +35,16 @@
     <div class="row col-md-12 menuContainer ">
       <ul class="nav  menuContainer">
         <li class="nav-item menubuttons">
-          <a class="nav-link active" href="index.html">Inicio</a>
+          <a class="nav-link active fs-2 " href="index.html">Inicio</a>
         </li>
         <li class="nav-item menubuttons">
-          <a class="nav-link active" href="Valvulas.html">Procedimientos</a>
+          <a class="nav-link active fs-2  " href="Valvulas.html">Procedimientos</a>
         </li>
         <li class="nav-item menubuttons">
-          <a class="nav-link active" href="#Politicas">Políticas</a>
+          <a class="nav-link active  fs-2 " href="#Politicas">Políticas</a>
         </li>
         <li class="nav-item menubuttons">
-          <a class="nav-link active" href="Cateterismo.html">Cateterismos</a>
+          <a class="nav-link active fs-2  " href="Cateterismo.html">Cateterismos</a>
         </li>
         <li class="nav-item dropdown NicoDropdown ">
           <a class="nav-link dropdown-toggle NicoDropdown" data-toggle="dropdown" href="#" role="button"
@@ -127,7 +127,7 @@
     <div class="  seccionesTexto text-center">
       <div class="seccionesTexto">
         <h2 class="text-center fs-3 text-danger "> Sobre este sitio web </h2>
-        <ul class="titaño fs-2 ">
+        <ul class=" fs-2 ">
           <li>El presente sitio está dirigido a profesionales médicos, pacientes y público en general que requiera
             información sobre procedimientos, técnicas o indicaciones utilizadas por “Medicina Vascular”
           </li>
