--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 
       <div class=" seccionesTexto">
         <h2 id="Politicas" class="text-center fs-3 text-danger">¿Quienes Somos y <br>¿Cuál es Nuestra Política? </h2>
-        <p>En el Foro de comunicación vascular Santov ejercemos la profesión desde hace
+        <p class="textos">En el Foro de comunicación vascular Santov ejercemos la profesión desde hace
           más veinte años.
           En este foro hay profesionales con una formación inicial en residencias médicas reconocidas en cada
           especialidad, y un trabajo ininterrumpido en los Servicios de Hemodinámica y Cardiología
